# EvoBotSequenceLibrary

./: .gitignore  API_DOCUMENTATION.md  BUILD.md  EMERGENCY_STOP_GUIDE.md  EMERGENCY_STOP_TEST_REPORT.md  EmergencyStopTest.java  GITHUB_ACTIONS_GUIDE.md  HTTP_ACTION_LIBRARY_GUIDE.md  HTTP_ACTION_LIBRARY_IMPLEMENTATION_SUMMARY.md  README.md  README_CHANGES.md  README_GITHUB.md  TEST_REPORT.md  build.gradle  deploy.sh  gradle.properties  package.sh  run_test.sh  settings.gradle  setup_github.sh
app/: build.gradle  proguard-rules.pro
docs/: ACTION_LIBRARY_STORAGE_GUIDE.md  API_DOCUMENTATION.md  API接口文档.md  APPLICATION_INTEGRATION_GUIDE.md  DYNAMIC_MAPPING_IMPLEMENTATION.md  ENGLISH_NAME_MIGRATION_GUIDE.md  FINAL_INTEGRATION_STATUS.md  HTTP_ACTION_LIBRARY_GUIDE.md  OFFLINE_FIRST_ACTION_LIBRARY_SUMMARY.md  PACKAGING_GUIDE.md  RK3399_DEPLOYMENT_GUIDE.md  RUST_NATIVE_IMPLEMENTATION_SUMMARY.md  TESTING_GUIDE.md  TESTING_SUMMARY.md
evobot-native/: Cargo.toml  build.sh
evobot-native/.cargo/: config.toml
evobot-native/src/: lib.rs
evobot-native/src/bin_disabled/: test_runner.rs
evobot-native/src/cache/: lru.rs  manager.rs  mod.rs
evobot-native/src/jni_bridge/: bridge.rs  callbacks.rs  mod.rs
evobot-native/src/playback/: engine.rs  mod.rs  state.rs  timer.rs
evobot-native/src/sequence/: data.rs  mod.rs  parser.rs  validator.rs
test/: ActionNameUtilsTest.java  AuthVerificationTest.java  FINAL_VERIFICATION_REPORT.md  FinalHttpTest.java  FinalTestSummary.md  HttpBasicTest.java  HttpFunctionTest.java  HttpTestReport.md  IntegrationTest.java  PathDebugTest.java  (+3 more)
(+42 files in other folders)
